<resources>
    <string name="app_name">IA Builder</string>
    <string name="card_system_ffg">FFG</string>
    <string name="card_system_iacp">IACP Season 6</string>
    <string name="qrcode">QR code</string>
    <string name="card_system">Card System</string>
    <string name="card_type">Card Type</string>
    <string name="faction">Faction</string>
    <string name="affiliation">Affiliation</string>
    <string name="trait">Trait</string>
    <string name="restriction">Restriction</string>
    <string name="filter">Filter</string>
    <string name="order">Order</string>
    <string name="box">Box</string>
    <string name="figure_type">Figure Type</string>
    <string name="figure_size">Figure Size</string>
    <string name="search">Search</string>
    <string name="shortlist">Shortlist</string>
    <string-array name="card_systems">
        <item>FFG</item>
        <item>IACP</item>
    </string-array>
    <string-array name="card_types">
        <item>Deployment</item>
        <item>Command</item>
        <item>Companion</item>
        <item>Form</item>
    </string-array>
    <string-array name="affiliations">
        <item>Any</item>
        <item>Rebel</item>
        <item>Imperial</item>
        <item>Mercenary</item>
        <item>Neutral</item>
    </string-array>
    <string-array name="traits">
        <item>Any</item>
        <item>Brawler</item>
        <item>Creature</item>
        <item>Droid</item>
        <item>Force User</item>
        <item>Guardian</item>
        <item>Heavy Weapon</item>
        <item>Hunter</item>
        <item>Leader</item>
        <item>Smuggler</item>
        <item>Spy</item>
        <item>Trooper</item>
        <item>Vehicle</item>
        <item>Wookiee</item>
        <item>Skirmish Upgrade</item>
        <item>Squad Upgrade</item>
    </string-array>
    <string-array name="restrictions">
        <item>All</item>
        <item>None</item>
        <item>Any Figure</item>
        <item>Brawler</item>
        <item>Creature</item>
        <item>Droid</item>
        <item>Force User</item>
        <item>Guardian</item>
        <item>Heavy Weapon</item>
        <item>Hunter</item>
        <item>Leader</item>
        <item>Smuggler</item>
        <item>Spy</item>
        <item>Trooper</item>
        <item>Vehicle</item>
        <item>Wookiee</item>
        <item>Unique</item>
        <item>Small</item>
        <item>Large</item>
        <item>Massive</item>
        <item>Rebel</item>
        <item>Imperial</item>
        <item>Mercenary</item>
    </string-array>
    <string-array name="orders">
        <item>Cost</item>
        <item>Name</item>
    </string-array>
    <string-array name="figure_types">
        <item>All</item>
        <item>Regular</item>
        <item>Elite</item>
        <item>Unique</item>
    </string-array>
    <string-array name="figure_sizes">
        <item>All</item>
        <item>Small</item>
        <item>Large</item>
        <item>Massive</item>
    </string-array>
    <string-array name="boxes">
        <item>All</item>
        <item>Core Set</item>
        <item>Luke Skywalker Ally Pack</item>
        <item>Darth Vader Villain Pack</item>
        <item>Chewbacca Ally Pack</item>
        <item>General Weiss Villain Pack</item>
        <item>Han Solo Ally Pack</item>
        <item>IG-88 Villain Pack</item>
        <item>Rebel Saboteurs Ally Pack</item>
        <item>Rebel Troopers Ally Pack</item>
        <item>Royal Guard Champion Villain Pack</item>
        <item>Twin Shadows</item>
        <item>Boba Fett Villain Pack</item>
        <item>Kayn Somos Villain Pack</item>
        <item>R2-D2 and C-3PO Ally Pack</item>
        <item>Hired Guns Villain Pack</item>
        <item>Stormtroopers Villain Pack</item>
        <item>Wookiee Warriors Ally Pack</item>
        <item>Return to Hoth</item>
        <item>Alliance Smuggler Ally Pack</item>
        <item>Bantha Rider Villain Pack</item>
        <item>Dengar Villain Pack</item>
        <item>Echo Base Troopers Ally Pack</item>
        <item>General Sorin Villain Pack</item>
        <item>Leia Organa Ally Pack</item>
        <item>The Bespin Gambit</item>
        <item>Agent Blaise Villain Pack</item>
        <item>Bossk Villain Pack</item>
        <item>ISB Infiltrators Villain Pack</item>
        <item>Lando Calrissian Ally Pack</item>
        <item>Greedo Villain Pack</item>
        <item>Obi-Wan Kenobi Ally Pack</item>
        <item>The Grand Inquisitor Villain Pack</item>
        <item>Jabba\'s Realm</item>
        <item>Alliance Rangers Ally Pack</item>
        <item>Captain Terro Villain Pack</item>
        <item>Jabba the Hutt Villain Pack</item>
        <item>Luke Skywalker Jedi Knight Ally Pack</item>
        <item>BT-1 and 0-0-0 Villain Pack</item>
        <item>Hera Syndulla and C1-10P Ally Pack</item>
        <item>Jawa Scavenger Villain Pack</item>
        <item>Heart of the Empire</item>
        <item>Ahsoka Tano Ally Pack</item>
        <item>Emperor Palpatine Villain Pack</item>
        <item>Maul Villain Pack</item>
        <item>Tyrants of Lothal</item>
        <item>Ezra Bridger and Kanan Jarrus Ally Pack</item>
        <item>Hondo Ohnaka Villain Pack</item>
        <item>Sabine Wren and Zeb Orrelios Ally Pack</item>
        <item>Thrawn Villain Pack</item>
        <item>IACP All Seasons</item>
        <item>IACP Season 1</item>
        <item>IACP Season 2</item>
        <item>IACP Season 3</item>
        <item>IACP Season 4</item>
        <item>IACP Season 5</item>
        <item>IACP Season 6</item>
    </string-array>
    <string name="dialog_army_create_title">Create</string>
    <string name="dialog_army_create_message">Enter the army name:</string>
    <string name="dialog_army_create_card_system">Choose the card system:</string>
    <string name="dialog_army_import_title">Import</string>
    <string name="dialog_army_edit_title">Rename</string>
    <string name="dialog_army_edit_message">Edit the army name:</string>
    <string name="dialog_army_name_hint">Insert the army name here</string>
    <string name="dialog_army_delete_title">Delete</string>
    <string name="dialog_army_delete_message">Are you sure do you want to delete this army?</string>
    <string name="dialog_card_removal_title">Remove</string>
    <string name="dialog_card_removal_message">Are you sure do you want to remove this card? It may also remove other cards from the army.</string>
    <string name="dialog_results_victories">Victories</string>
    <string name="dialog_results_defeats">Defeats</string>
    <string name="dialog_results_title">Results</string>
    <string name="action_show">Show invalid cards</string>
    <string name="action_hide">Hide invalid cards</string>
    <string name="action_browse_cards">Browse cards</string>
    <string name="action_import_link">Import link</string>
    <string name="action_import_file">Import file</string>
    <string name="action_share_link">Share link</string>
    <string name="action_share_file">Share file</string>
    <string name="action_share_image">Share image</string>
    <string name="action_qrcode">Show QR code</string>
    <string name="action_clone">Clone</string>
    <string name="action_rename">Rename</string>
    <string name="action_results">Results</string>
    <string name="action_settings">Settings</string>
    <string name="main_update_available">\"Version \"%1$s\" is now available!\"</string>
    <string name="chooser_card_added">Card \"%1$s\" added.</string>
    <string name="chooser_card_removed">Card \"%1$s\" removed.</string>
    <string name="cards_selected">%1$d %2$s selected</string>
    <string name="points_left">%1$d %2$s left</string>
    <string name="card">card</string>
    <string name="cards">cards</string>
    <string name="point">point</string>
    <string name="points">points</string>
    <string name="undo">Undo</string>
    <string name="download">Download</string>
    <string name="error_image_conversion">Error converting the army into an image</string>
    <string name="error_file_conversion">Error converting the army into a file</string>
    <string name="error_invalid_name">Invalid army name</string>
    <string name="error_removal_canceled">Card removal canceled</string>
    <string name="error_creation_canceled">Army creation canceled</string>
    <string name="error_renaming_canceled">Army renaming canceled</string>
    <string name="error_deletion_canceled">Army deletion canceled</string>
    <string name="error_invalid_value">Enter a number between %1$d and %2$d</string>
    <string name="error_invalid_link">Invalid link</string>
    <string name="error_invalid_file">Invalid Vassal deck file</string>
    <string name="scan_qr_code">Scan this QR code with your camera to open the list in your phone.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="preference_category_deck">Deck</string>
    <string name="preference_category_card_chooser">Card Chooser</string>
    <string name="preference_category_card_browser">Card Browser</string>
    <string name="preference_title_columns_portrait">Number of columns in portrait mode</string>
    <string name="preference_title_columns_landscape">Number of columns in landscape mode</string>
    <string name="preference_summary_columns">Current value: %1$d</string>
    <string name="preference_title_image_scaling">Card image scaling</string>
    <string name="preference_summary_image_scaling">Current value: %1$d</string>
    <string name="dialog_release_notes_title">Release Notes</string>
    <string name="dialog_release_notes_version_1">
        Version 1.0.0\n
        - Public beta
    </string>
    <string name="dialog_release_notes_version_2">
        Version 1.0.1\n
        - Public release
    </string>
    <string name="dialog_release_notes_version_3">
        Version 1.0.2\n
        - Filtering of invalid Skirmish Upgrades in card chooser screen\n
        - Added form cards and companion cards in card viewer screen\n
        - New images for errata cards\n
        - Fixed Victories/Defeats dialog
    </string>
    <string name="dialog_release_notes_version_4">
        Version 1.0.3\n
        - Added content for IACP Season 3\n
        - Added version availability check\n
        - Side effects of card removal are now reverted clicking on "undo"\n
        - Fixed minor bugs
    </string>
    <string name="dialog_release_notes_version_5">
        Version 1.0.4\n
        - Fixed bugs related to Imperial Temporary Alliance\n
        - Fixed bugs related to Yoda, Jedi Master
    </string>
    <string name="dialog_release_notes_version_6">
        Version 1.0.5\n
        - Fixed filtering of command cards for Force Users
    </string>
    <string name="dialog_release_notes_version_7">
        Version 1.0.6\n
        - Fixed Command Card filtering when the army contains 4-LOM\n
        - Added Relese Notes dialog shown after version upgrade
    </string>
    <string name="dialog_release_notes_version_8">
        Version 1.0.7\n
        - Added file dump for uncaught exceptions\n
        - Fixed crash loading an IACP army with "Cohesive Fireteam"
    </string>
    <string name="dialog_release_notes_version_9">
        Version 1.0.8\n
        - Fixed bug in card chooser screen that sometimes ignored clicks on cards\n
        - Fixed bug with Imperial Retrofitting not showing up after adding SC2-M Repulsor Tank or AT-ST to the army\n
        - Replaced IACP Season 1 and Season 2 approved cards with their newer and more readable version
    </string>
    <string name="dialog_release_notes_version_10">
        Version 1.0.9\n
        - Added ability to load an army from a Vassal deck file\n
        - Added ability to share a Vassal deck file\n
        - Fixed IACP elite cards not marked as elite\n
        - Minor changes
    </string>
    <string name="dialog_release_notes_version_11">
        Version 1.0.10\n
        - Update for IACP v3.1
    </string>
</resources>