<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.swia.iabuilder.activities.MainActivity">

    <item
        android:id="@+id/action_browse_cards"
        android:icon="@drawable/ic_browser"
        android:title="@string/action_browse_cards" />

    <item
        android:id="@+id/action_import_link"
        android:icon="@drawable/ic_import"
        android:title="@string/action_import_link" />

    <item
        android:id="@+id/action_import_file"
        android:icon="@drawable/ic_load"
        android:title="@string/action_import_file" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

</menu>