<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_army_create_message"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/dialog_army_name_hint"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtCardSystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_army_create_card_system"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/grpCardSystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radFfg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_margin"
            android:layout_marginTop="@dimen/radio_button_margin"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/card_system_ffg" />

        <RadioButton
            android:id="@+id/radIacp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_margin"
            android:layout_marginTop="@dimen/radio_button_margin"
            android:layout_weight="1"
            android:text="@string/card_system_iacp" />

    </RadioGroup>

</LinearLayout>